# reflex

./: .gitignore  API.md  ARCHITECTURE.md  BATCH_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SCHEMA_MIGRATION_STATUS.md  TESTING.md  build.rs  cog.toml  dist-workspace.toml  release-plz.toml  rfx  test.js  test.php  test.py  test.ts  test_reflex.sh  test_user_code.ts
.bruno/: Get Stats.bru  Health Check.bru  Query - Exact Match.bru  Query - Expanded Results.bru  Query - File Filter.bru  Query - Language Filter.bru  Query - Regex Search.bru  README.md  bruno.json
.context/: BINARY_FORMAT_RESEARCH.md  DEPS_TODO.md  README.md  RUNTIME_SYMBOL_DETECTION.md  SEMANTIC_QUERY_PROMPT.md  TODO.md  TRIGRAM_RESEARCH.md
.github/workflows/: publish-packages.yml  release-plz.yml  release.yml  version-bump.yml
aur/: .SRCINFO  PKGBUILD
distribution-templates/homebrew-reflex/: README.md  update-formula.sh
distribution-templates/homebrew-reflex/Formula/: reflex.rb
distribution-templates/scoop-reflex/: README.md
distribution-templates/scoop-reflex/.github/workflows/: excavator.yml
distribution-templates/scoop-reflex/bucket/: reflex.json
docs/: API.md  DEPENDENCIES.md  DISCREPANCIES.md  DISTRIBUTION-QUICKSTART.md  DISTRIBUTION.md  INTERACTIVE-MODE.md  TESTING.md  VSCODE_EXTENSION_TODO.md  ai-agent-integration.md
examples/: ai_agent_example.py  ai_agent_example.sh  discover_kotlin_ast.rs  discover_zig_ast.rs  test_cache.rs  test_indexer.rs  test_java_tree.rs  test_parser.rs  test_query.rs
reflex-api/: Get Stats.bru  Index - Incremental with Language Filter.bru  Index - Trigger Full Reindex.bru  Query - Combined Filters.bru  Query - Full Text Search.bru  Query - Symbol Search.bru  README.md
reflex-api/environments/: Local.bru
src/: ast_query.rs  background_indexer.rs  cache.rs  cli.rs  content_store.rs  dependency.rs  formatter.rs  git.rs  indexer.rs  lib.rs  line_filter.rs  main.rs  mcp.rs  models.rs  output.rs  query.rs  regex_trigrams.rs  symbol_cache.rs  trigram.rs  watcher.rs
src/cache/: symbol_reader.rs  symbol_writer.rs
src/context/: detection.rs  mod.rs  structure.rs
src/interactive/: app.rs  effects.rs  filter_selector.rs  history.rs  input.rs  mod.rs  mouse.rs  results.rs  syntax.rs  terminal.rs  theme.rs  ui.rs
src/parsers/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  svelte.rs  swift.rs  tsconfig.rs  typescript.rs  vue.rs  zig.rs
src/semantic/: agentic.rs  answer.rs  chat_session.rs  chat_tui.rs  config.rs  configure.rs  context.rs  evaluator.rs  executor.rs  mod.rs  progress.rs  prompt.rs  prompt_agentic.md  prompt_agentic.rs  prompt_template.md  reporter.rs  schema.rs  schema_agentic.rs  tools.rs
src/semantic/providers/: anthropic.rs  gemini.rs  groq.rs  mod.rs  openai.rs
tests/: corpus_test.rs  integration_test.rs  performance_test.rs  test_helpers.rs
tests/claude_code_benchmarks/: EXECUTIVE_SUMMARY.md  FINDINGS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REALISTIC_EXPECTATIONS.md  TESTING_GUIDE.md  analyze_results.py  example_manual_test.md  run_benchmark.sh  test_prompts.md
tests/corpus/c/: structs.c
tests/corpus/edge_cases/: keywords_in_strings.rs  keywords_mixed_case.rs  keywords_partial.rs  macro_templates.rs  mixed_encodings.txt  operators.txt  unicode_heavy.txt  very_long_line.txt  whitespace.txt
tests/corpus/filtered/examples/: basic.rs  (+1 more)
tests/corpus/go/: functions.go  structs.go
tests/corpus/java/: classes.java  interfaces.java
tests/corpus/javascript/: arrow_functions.js  classes.js  destructuring.js  functions.js  modules.js
tests/corpus/php/: classes.php  enums.php  functions.php  namespaces.php  traits.php
tests/corpus/python/: classes.py  functions.py
tests/corpus/rust/: async_patterns.rs  attributes.rs  closures.rs  comments.rs  deeply_nested.rs  empty.rs  enums.rs  error_handling.rs  functions.rs  generics_complex.rs  impls.rs  iterators.rs  lifetimes.rs  long_lines.rs  macros.rs  many_symbols.rs  modules.rs  raw_identifiers.rs  single_char.rs  special_chars.rs  structs.rs  traits.rs  unicode_identifiers.rs  weird_spacing.rs
tests/corpus/svelte/: component.svelte  stores.svelte
tests/corpus/typescript/: async.ts  classes.ts  decorators.ts  enums.ts  generics.ts  interfaces.ts  namespaces.ts  react_class.tsx  react_hooks.tsx  types.ts
tests/corpus/vue/: composition_api.vue  options_api.vue
vscode/: .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
vscode/src/commands/: configureAI.ts  openFile.ts  reindex.ts
vscode/src/providers/: SearchViewProvider.ts
vscode/src/types/: search.ts
vscode/src/utils/: config.ts  gitignore.ts  models.ts  reflexClient.ts  secrets.ts  serverManager.ts
vscode/webview-ui/: index.html  package-lock.json  package.json  vite.config.ts
vscode/webview-ui/src/: App.tsx  SearchView.tsx  index.css  main.tsx  vscode.d.ts
(+16 files in other folders)
