[package]
name = "reflex"
version = "0.1.1"
edition = "2024"
authors = ["RefLex Contributors"]
description = "A local-first, structure-aware code search engine for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/therecluse26/reflex"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
strum = { version = "0.26", features = ["derive"] }

# Parsing
tree-sitter = "0.24"
streaming-iterator = "0.1"

# Tree-sitter grammars (using latest available versions)
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"

# Hashing
blake3 = "1.5"

# Serialization
rkyv = "0.8"
memmap2 = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP server
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Parallel processing
rayon = "1.10"

# Regex
regex = "1.10"

# Compression
zstd = "0.13"

# File watching
notify = "6.1"

# Ignore patterns
ignore = "0.4"

# Date/time utilities
chrono = "0.4"

# Progress bar
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "rfx"
path = "src/main.rs"

[lib]
name = "reflex"
path = "src/lib.rs"
