[package]
name = "reflex-search"
version = "0.4.1"
edition = "2024"
authors = ["Reflex Contributors"]
description = "A local-first, structure-aware code search engine for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reflex-search/reflex"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
strum = { version = "0.26", features = ["derive"] }

# Parsing
tree-sitter = "0.24"
streaming-iterator = "0.1"

# Tree-sitter grammars (using latest available versions)
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
# tree-sitter-swift = "0.7.1"  # Temporarily disabled - requires tree-sitter 0.23
tree-sitter-zig = "1.1.2"

# Hashing
blake3 = "1.5"

# Serialization
rkyv = "0.8"
memmap2 = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP server
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Parallel processing
rayon = "1.10"

# Regex
regex = "1.10"

# Compression
zstd = "0.13"

# File watching
notify = "6.1"

# Ignore patterns
ignore = "0.4"

# Glob pattern matching
globset = "0.4"

# Date/time utilities
chrono = "0.4"

# Progress bar
indicatif = "0.17"

# Terminal UI and formatting
ratatui = "0.29"
crossterm = "0.28"
syntect = "5.2"
unicode-width = "0.2"
owo-colors = "4.1"

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "rfx"
path = "src/main.rs"

[lib]
name = "reflex"
path = "src/lib.rs"

# Optimized release profile for cargo install users
[profile.release]
lto = "thin"           # Enable link-time optimization for cross-file inlining
opt-level = 3          # Maximum optimization level
codegen-units = 1      # Single codegen unit for maximum optimization
strip = true           # Remove debug symbols for smaller binary

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
